# weatherlib

./: pyproject.toml
weatherlib/: main.py
weatherlib/weatherlookup/: user_input.py  weather_api.py
