[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weatherlib"
version = "0.1.0"
description = "A simple weather checking application"
authors = [
    {name = "Weather Checker", email = "example@example.com"},
]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.13"

[project.scripts]
weather-checker = "weatherlib.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]